objects/ssot__CareProgramCampaign__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramId__c</fullName>
        <label>Care Program</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Program Campaign Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemIdentifier__c</fullName>
        <label>Source System Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModifiedDate__c</fullName>
        <label>Source System Modified DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726253666_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramCampaign_CampaignId_map_C_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>CareProgramCampaign_CampaignId_map_C_rel</relationshipLabel>
        <relationshipName>rel_1716726253666_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726257338_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramCampaign_CareProgramId_ma_rel</label>
        <referenceTo>ssot__CareProgram__dlm</referenceTo>
        <relationshipLabel>CareProgramCampaign_CareProgramId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716726257338_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>